2003-07-30  Carl Worth  <cworth@isi.edu>

	* src/cairo_traps.c (_line_segs_intersect_ceil): Add one more
	conditional intersect to push past some fill bugs.

	* src/cairo_surface.c (cairo_surface_create_for_drawable):
	(cairo_surface_create_for_image):
	(cairo_surface_put_image):
	(_cairo_surface_pull_image):
	(_cairo_surface_push_image):
	(cairo_surface_set_matrix):
	(cairo_surface_get_matrix):
	(cairo_surface_set_repeat):
	(_cairo_surface_composite):
	(_cairo_surface_fill_rectangle):
	(_cairo_surface_fill_rectangles):
	(_cairo_surface_composite_trapezoids): Absorb all functionality
	previously in the Xc library.

	* src/cairo_pen.c (_cairo_pen_init): Don't store floating point
	theta in the pen. Instead, sort vertices by fixed point slope
	comparisons.
	(_cairo_pen_add_points): Fixed to remove duplicate pen vertices
	appearing at beginning and end of vertex array.
	(_pen_vertex_compare): New fixed-point "angle" comparison for pen
	vertices. A bit trickier than before, but much more accurate.

	* src/cairo_path_stroke.c (_cairo_stroker_face_clockwise): Share
	clockwise calculation with other modules.

	* src/cairo_path_bounds.c:
	* src/cairo_path_fill.c:
	* src/cairo_path_stroke.c:
	* src/cairo_pen.c:
	* src/cairo_polygon.c:
	* src/cairo_spline.c:
	* src/cairo_traps.c:
	* src/cairo_path.c: Replaced all references to
	XFixed, XPointFixed, XLineFixed, and XTrapezoid with new
	cairo_fixed_t, cairo_point_t, cairo_line_t, and cairo_trapezoid_t.

	* src/cairo_path.c: (_cairo_path_interpret): Made the path
	interpreter callback names consistent, (eg. add_edge rather than
	AddEdge).

	* src/cairo_gstate.c (_cairo_gstate_text_extents): Now silently
	exits for a non X surface, (avoids a crash until we can implement
	the libic text backend).

	* src/cairo_gstate.c (_cairo_gstate_end_group):
	(_cairo_gstate_clip_and_composite_trapezoids):
	(_cairo_gstate_show_surface): Replaced all XcCalls with
	corresponding cairo_surface_calls.
